<resources>
    <string name="app_name">Scientific Calculator</string>
    <string name="ac">AC</string>
    <string name="delete">DEL</string>
    <string name="percentage">%</string>
    <string name="divide">÷</string>
    <string name="dgt_9">9</string>
    <string name="dgt_8">8</string>
    <string name="dgt_7">7</string>
    <string name="multiply">×</string>
    <string name="dgt_6">6</string>
    <string name="dgt_5">5</string>
    <string name="dgt_4">4</string>
    <string name="subtraction">-</string>
    <string name="dgt_3">3</string>
    <string name="dgt_2">2</string>
    <string name="dgt_1">1</string>
    <string name="addition">+</string>
    <string name="answer">ANS</string>
    <string name="dgt_0">0</string>
    <string name="decimal">.</string>
    <string name="evaluate">Solve</string>
    <string name="equals">=</string>
    <string name="alpha">ɑ</string>
    <string name="beta">β</string>
    <string name="gamma">ɣ</string>
    <string name="delta">Δ</string>
    <string name="w">w</string>
    <string name="euler">e</string>
    <string name="x">x</string>
    <string name="y">y</string>
    <string name="z">z</string>
    <string name="tab_basic">Main</string>
    <string name="tab_scientific">Func</string>
    <string name="tab_history">History</string>
    <string name="tab_graph">Graph</string>
    <string name="tab_preferences">⚙</string>
    <string name="tab_function">abc</string>
    <string name="sin">sin</string>
    <string name="cos">cos</string>
    <string name="tan">tan</string>
    <string name="squared_display">x²</string>
    <string name="squared">²</string>
    <string name="natural_log">ln</string>
    <string name="log10">log₁₀</string>
    <string name="power_display">power</string>
    <string name="power">^</string>
    <string name="cubed_display">x³</string>
    <string name="cubed">³</string>
    <string name="npr">nPr</string>
    <string name="ncr">nCr</string>
    <string name="pi">π</string>
    <string name="sqrt">√</string>
    <string name="arc_sin">sin⁻¹</string>
    <string name="arc_cos">cos⁻¹</string>
    <string name="arc_tan">tan⁻¹</string>
    <string name="cubed_root">∛</string>
    <string name="lbra">(</string>
    <string name="rbra">)</string>
    <string name="rand">rand</string>
    <string name="factorial">!</string>
    <string name="clear_history">Clear</string>
    <string name="lbra_square">[</string>
...
