...
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:textSize="18sp"
            android:text="@string/cubed_display" />

        <Button
            android:id="@+id/combinations"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/ncr"
            android:textSize="18sp" />

        <Button
            android:id="@+id/permutation"
            style="@android:style/Widget.Material.Light.Button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/npr"
            android:textSize="18sp" />
...
